// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiContextMenu can pass-through horizontal rule props 1`] = `
<div
  class="euiContextMenu emotion-euiContextMenu"
  style="height: 0px;"
>
  <div
    class="euiContextMenuPanel emotion-euiContextMenuPanel-euiContextMenu__panel"
    tabindex="-1"
  >
    <div
      class="euiContextMenuPanelTitle euiContextMenuPanel__title emotion-euiContextMenuPanelTitle"
      data-test-subj="contextMenuPanelTitle"
    >
      <h2
        class="euiContextMenuPanelTitle__text css-8u7lys-text"
        id="generated-id_euiContextMenuPanelTitle"
      >
        Testing separator
      </h2>
    </div>
    <div
      aria-labelledby="generated-id_euiContextMenuPanelTitle"
      class="euiContextMenuPanel__list"
      role="menu"
    >
      <hr
        class="euiHorizontalRule emotion-euiHorizontalRule-half-s"
        role="separator"
      />
    </div>
  </div>
</div>
`;

exports[`EuiContextMenu props panels and initialPanelId renders the referenced panel 1`] = `
<div
  class="euiContextMenu emotion-euiContextMenu"
  style="height: 0px;"
>
  <div
    class="euiContextMenuPanel emotion-euiContextMenuPanel-euiContextMenu__panel"
    tabindex="-1"
  >
    <div
      class="euiContextMenuPanelTitle euiContextMenuPanel__title emotion-euiContextMenuPanelTitle"
      data-test-subj="contextMenuPanelTitle"
    >
      <button
        aria-label="Close current panel:"
        aria-labelledby="generated-id_euiContextMenuPanelTitle-closeButton generated-id_euiContextMenuPanelTitle"
        class="euiButtonIcon emotion-euiButtonIcon-xs-empty-text"
        data-test-subj="contextMenuPanelTitleButton"
        id="generated-id_euiContextMenuPanelTitle-closeButton"
        type="button"
      >
        <span
          aria-hidden="true"
          class="euiButtonIcon__icon"
          color="inherit"
          data-euiicon-type="chevronSingleLeft"
        />
      </button>
      <h2
        class="euiContextMenuPanelTitle__text css-8u7lys-text"
        id="generated-id_euiContextMenuPanelTitle"
      >
        2
      </h2>
    </div>
    <div
      aria-labelledby="generated-id_euiContextMenuPanelTitle"
      class="euiContextMenuPanel__list"
    >
      <div>
        2
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiContextMenu renders 1`] = `
<div
  aria-label="aria-label"
  class="euiContextMenu testClass1 testClass2 emotion-euiContextMenu-euiTestCss"
  data-test-subj="test subject string"
/>
`;

exports[`EuiContextMenu renders isSeparator items 1`] = `
<div
  class="euiContextMenu emotion-euiContextMenu"
  style="height: 0px;"
>
  <div
    class="euiContextMenuPanel emotion-euiContextMenuPanel-euiContextMenu__panel"
    tabindex="-1"
  >
    <div
      class="euiContextMenuPanelTitle euiContextMenuPanel__title emotion-euiContextMenuPanelTitle"
      data-test-subj="contextMenuPanelTitle"
    >
      <h2
        class="euiContextMenuPanelTitle__text css-8u7lys-text"
        id="generated-id_euiContextMenuPanelTitle"
      >
        Testing separator
      </h2>
    </div>
    <div
      aria-labelledby="generated-id_euiContextMenuPanelTitle"
      class="euiContextMenuPanel__list"
      role="menu"
    >
      <div
        class="euiListItemLayout euiContextMenuItem emotion-euiListItemLayout-euiContextMenuItem-center"
        data-test-subj="euiListItemLayout"
        role="menuitem"
      >
        <span
          class="euiListItemLayout__content emotion-euiListItemLayout__content"
        >
          <span
            class="euiListItemLayout__text euiContextMenuItem__text emotion-euiListItemLayout__text-wrap-euiContextMenuItem__text"
          >
            Foo
          </span>
        </span>
      </div>
      <hr
        class="euiHorizontalRule emotion-euiHorizontalRule-full-xs"
        role="separator"
      />
      <div
        class="euiListItemLayout euiContextMenuItem emotion-euiListItemLayout-euiContextMenuItem-center"
        data-test-subj="euiListItemLayout"
        role="menuitem"
      >
        <span
          class="euiListItemLayout__content emotion-euiListItemLayout__content"
        >
          <span
            class="euiListItemLayout__text euiContextMenuItem__text emotion-euiListItemLayout__text-wrap-euiContextMenuItem__text"
          >
            Bar
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiContextMenu renders panels with JSX 1`] = `
<div
  class="euiContextMenu emotion-euiContextMenu"
  style="height: 0px;"
>
  <div
    class="euiContextMenuPanel emotion-euiContextMenuPanel-euiContextMenu__panel"
    tabindex="-1"
  >
    <div
      class="euiContextMenuPanelTitle euiContextMenuPanel__title emotion-euiContextMenuPanelTitle"
      data-test-subj="contextMenuPanelTitle"
    >
      <h2
        class="euiContextMenuPanelTitle__text css-8u7lys-text"
        id="generated-id_euiContextMenuPanelTitle"
      >
        3
      </h2>
    </div>
    <div
      aria-labelledby="generated-id_euiContextMenuPanelTitle"
      class="euiContextMenuPanel__list"
      role="menu"
    >
      <div
        class="euiListItemLayout euiContextMenuItem emotion-euiListItemLayout-euiContextMenuItem-center"
        data-test-subj="euiListItemLayout"
        role="menuitem"
      >
        <span
          class="euiListItemLayout__content emotion-euiListItemLayout__content"
        >
          <span
            class="euiListItemLayout__text euiContextMenuItem__text emotion-euiListItemLayout__text-wrap-euiContextMenuItem__text"
          >
            <span
              style="color: tomato;"
            >
              foo
            </span>
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;
